Load keyboard through template supplied keys array
Write a handlebars template that will take an array of 46 string keys
and create a keyboard interface with them
Write functions & associated arrays for 'shifted' and 'unshifted' status

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -42,7 +42,7 @@ main {
     border-radius: 5px;
     float: left;
     height: $key-size;
-    line-height: 40px;
+    line-height: $key-size;
     margin: 0 5px 5px 0;
     text-align: center;
     width: $key-size;
