Make keyboard type text onto screen
Abandon handlebars approach, put template into html file and replaced
handlebars helpers with two span elements each one with class 'upper'
and one with class 'lower' to handle lower/upper case text (hiding upper
on document load)
Change screen to div (from textarea) so users cant regular type into the
screen (ie english letters)
Does not yet handle spacing/editing buttons, need to content with text
running off the screen

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 
-$page-bg: #eee;
+$page-bg: #bbb;
 $main-bg: #fff;
 $soft-border: #f9f9f9;
-$shade: #e5e5e5;
+$shade: #b2b2b2;
 $key-size: 40px;
 
 * {
@@ -16,9 +16,27 @@ body {
   font: 75% / 1.5 sans-serif;
 }
 
+h1 {
+  margin-top: 5vh;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.5em;
+}
+
 main {
   margin: 100px auto;
   width: 688px;
+}
+
+.clicked {
+  box-shadow: inset 2px 2px 8px 2px $shade;
+}
+
+.hidden {
+  display: none;
 }
 
 .screen {
@@ -63,10 +81,6 @@ main {
   }
 
   .space {
-    width: $key-size + 623px;
+    width: $key-size + 620px;
   }
-}
-
-.clicked {
-  background-color: blue;
 }
