Complete typing action for all non-shift editors
Complete typing action for Backspace, tab, enter, and space
Still need to contend with CapsLock and both shifts

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 
-$page-bg: #bbb;
+$page-bg: #1d8678;
 $main-bg: #fff;
 $soft-border: #f9f9f9;
 $shade: #b2b2b2;
@@ -47,6 +47,7 @@ main {
   height: 200px;
   margin: 0 0 5px;
   padding: 5px;
+  pointer-events: none;
   width: 671px;
 }
 
